fix: adjust the alignment for bnpl and strategies modal

--- a/view/frontend/web/css/checkout.less
+++ b/view/frontend/web/css/checkout.less
@@ -193,23 +193,16 @@
 }
 
 .modal-popup._show {
-    .modal-inner-wrap:has(#bnpl-modal) {
-        top: 50%;
-        transform: translateY(-50%);
-        -webkit-transform: translateY(-50%);
-        margin: auto;
-    }
-
-    .modal-content {
-        max-height: 95vh;
-        display: flex;
-        flex-direction: column;
-    }
-
-    .modal-inner-wrap:has(#koin-modal-antifraud-strategy) {
+    .modal-inner-wrap:has(#bnpl-modal), .modal-inner-wrap:has(#koin-modal-antifraud-strategy) {
         top: 10%;
 
         .modal-content {
+            height: 100%;
+
+            #bnpl-modal {
+                height: 100%;
+            }
+
             #koin-modal-iframe {
                 min-height: 30vh;
             }
